# cvpilot

./: .gitignore  Dockerfile  README.md  config.py  gem.py  outputs.md  pick.py  pyproject.toml
.github/workflows/: pylint.yml
app/: claude_agent.py  config.py  core.py  full_claude_agent.py  gemini_agent.py  main.py  old_main.py  utils.py
app/agents/: chatopenai_agent.py  openai_agent.py
basic_app/: config.py  gemini_agent.py  main.py  utils.py
jd/: sr_cloud_engineer.txt
